<resources>
    <string name="app_name">calculadora</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="n0">0</string>
    <string name="n0d">.</string>
    <string name="n0e">=</string>
    <string name="np">+</string>
    <string name="nx">*</string>
    <string name="nd">/</string>
    <string name="nm">-</string>
    <string name="nc">C</string>
    <string name="alerta_title">Operação inválida!</string>
    <string name="alerta_conteúdo">Por favor digite uma operação válida.</string>
    <string name="ok">OK</string>
</resources>
