<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textSuperior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="268dp"
        android:layout_marginLeft="268dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="60dp"
        android:gravity="center|end"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textoCentral"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textoCentral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="238dp"
        android:layout_marginLeft="238dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="484dp"
        android:gravity="center|end"
        android:maxLength="12"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="270dp"
        android:layout_height="396dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="111dp"
        android:layout_marginRight="111dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoCentral">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onDigit"
                android:padding="40dp"
                android:text="@string/n7" />

            <Button
                android:id="@+id/button22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onDigit"
                android:padding="40dp"
                android:text="@string/n8" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onDigit"
                android:padding="40dp"
                android:text="@string/n9" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onDigit"
                android:padding="40dp"
                android:text="@string/n4" />

            <Button
                android:id="@+id/button24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onDigit"
                android:padding="40dp"
                android:text="@string/n5" />

            <Button
                android:id="@+id/button25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onDigit"
                android:padding="40dp"
                android:text="@string/n6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onDigit"
                android:padding="40dp"
                android:text="@string/n1" />

            <Button
                android:id="@+id/button27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onDigit"
                android:padding="40dp"
                android:text="@string/n2" />

            <Button
                android:id="@+id/button28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onDigit"
                android:padding="40dp"
                android:text="@string/n3" />
        </TableRow>

        <TableRow

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperator"
                android:padding="40dp"
                android:text="@string/n0d" />

            <Button
                android:id="@+id/button30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onDigit"
                android:padding="40dp"
                android:text="@string/n0" />

            <Button
                android:id="@+id/button31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onEquals"
                android:padding="40dp"
                android:text="@string/n0e" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="79dp"
        android:layout_height="410dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/textoCentral">

        <Button
            android:id="@+id/button32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClear"
            android:padding="30dp"
            android:text="@string/nc" />

        <Button
            android:id="@+id/button33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onOperator"
            android:padding="30dp"
            android:text="@string/nd" />

        <Button
            android:id="@+id/button34"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onOperator"
            android:padding="30dp"
            android:text="@string/nx" />

        <Button
            android:id="@+id/button35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onOperator"
            android:padding="30dp"
            android:text="@string/nm" />

        <Button
            android:id="@+id/button36"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onOperator"
            android:padding="30dp"
            android:text="@string/np" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>